[gd_scene load_steps=7 format=2]

[ext_resource path="res://elephant/elephant_side_LR.tscn" type="PackedScene" id=1]
[ext_resource path="res://elephant/Elephant.gd" type="Script" id=2]
[ext_resource path="res://elephant/elephant_up.tscn" type="PackedScene" id=4]
[ext_resource path="res://elephant/elephant_down.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=3]
radius = 63.0

[sub_resource type="CircleShape2D" id=2]
radius = 512.0

[node name="Elephant" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="elephant_side" parent="." groups=["animations"] instance=ExtResource( 1 )]
position = Vector2( -9, 77 )
scale = Vector2( 0.4, 0.4 )

[node name="elephant_up" parent="." groups=["animations"] instance=ExtResource( 4 )]
visible = false
position = Vector2( -1, 86 )
scale = Vector2( 0.4, 0.4 )

[node name="elephant_down" parent="." groups=["animations"] instance=ExtResource( 5 )]
visible = false
position = Vector2( -1, 82 )
scale = Vector2( 0.4, 0.4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = -18.0
margin_top = -47.0
margin_right = 22.0
margin_bottom = -33.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemDetectionArea"]
shape = SubResource( 2 )

[node name="FreeTarget" type="Position2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 12
